linuxtips/kubernetes/aula-5/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  # mude para seu endereço
  - host: ec2-18-212-4-47.compute-1.amazonaws.com
    http:
      paths:
      - backend:
          serviceName: nginx-ingress
          servicePort: 18080
        path: /nginx_status
